code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__project_branch_delete_confirmation_inline_chinese.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 项 目 分 支  › 删 除 分 支  ──────────────────────────────────────────────────────────────────────────────
                                                                                                    
> topic  ·  只 能 删 除 已 合 并 的 分 支 ； 此 操 作 无 法 撤 销 。                                                   
                                                                                                    
  Enter 删 除   ·  Esc 返 回
