code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__project_branch_deleted_fullscreen.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Project branches ─────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search branches                                                    │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Branch deleted.                                                        │             
            │  New branch  ·  At HEAD · no checkout change                            │             
            │  Project branches                                                       │             
            │> main  ·  Current                                                       │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│  b New branch · d delete · / search · Esc close                         │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
