code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__project_worktree_delete_confirmation_inline_chinese.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 项 目 工 作 树  › 删 除 工 作 树  ──────────────────────────────────────────────────────────────────────────
                                                                                                    
> /worktrees/topic  ·  只 能 删 除 没 有 改 动 且 未 绑 定 任 务 的 关 联 工 作 树 。                                    
                                                                                                    
  Enter 删 除   ·  Esc 返 回
